Changes for 1.1alpha12:

 - support of all types of SNMP metrics (Alexei)
 - fixed src/zabbix_server/Makefile.am for SNMP-enabled compilation (Alexei)

Changes for 1.1alpha11:

 - new configuration optio --enable-server (Alexei)
 - new XML based protocol between hosts and agents. Backward compatible. (Alexei)
 - WIN32 agent: support of active checks (Alexei)
 - fixed addition of complex triggers for linked hosts (Alexei)
 - housekeeper improved to delete hosts sequentially (Alexei)
 - new utility zabbix_get (Alexei)
 - added src/zabbix_get/* (Alexei)
 - user timeout time is configurable (Alexei)
 - added support of locales on user level (Alexei)
 - added support of user profiles (Alexei)
 - removed include/local_en.inc.php
 - added include/locales/.htaccess (Alexei)
 - added include/locales/en_en.inc.php (Alexei)
 - added include/locales/de_de.inc.php (Alexei)
 - added include/locales/en_en.inc.php (Alexei)
 - added column users.lang (Alexei)
 - added column users.autologout (Alexei)
 - added frontends/php/profile.php (Alexei)
 - performance optimization: do not update functions and triggers if same
 value received (Alexei)
 - do not show deleted hosts/items and triggers (Alexei)
 - draw graph's timeline even if no data exists (Alexei)
 - added support of system[procload] under AIX. Thanks to Moisio Juha. (Alexei)
 - fixed selection of IT Service calculation algorithm (Alexei)
 - added column escalation_log.actiontype (Alexei)
 - time related function 'nodata','date','dayofweek','time','now' will be
   periodically updated (Alexei)
 - update of functions optimised. Do not update if same value. (Alexei)
 - better support of automake (Alexei)
 - better modulatisation of code (Alexei)
 - added src/zabbix_server/escalator.[ch] (Alexei)
 - nodata() will be calculated regardless of its previous value (Alexei)
 - simplified code for trigger status updated (Alexei)
 - better read loop in active.c (Alexei)
 - added parameter DisableActive for zabbix_agentd (Alexei)